force-app/main/default/objects/FPS_Bor_Error_Log__c/FPS_Bor_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Borealis/FPS POC custom object</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ERR - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>