force-app/main/default/objects/FPS_Bor_Error_Log__c/fields/Error_Context__c.field-meta.xml
<CustomField>
    <fullName>Error_Context__c</fullName>
    <label>Error Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>