force-app/main/default/objects/FPS_Bor_Error_Log__c/fields/Insert_Or_Update__c.field-meta.xml
<CustomField>
    <fullName>Insert_Or_Update__c</fullName>
    <label>Insert Or Update</label>
    <length>20</length>
    <type>Text</type>
</CustomField>