force-app/main/default/objects/FPS_Bor_Error_Log__c/fields/Record_Details__c.field-meta.xml
<CustomField>
    <fullName>Record_Details__c</fullName>
    <label>Record Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>