force-app/main/default/objects/FPS_Bor_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Class__c</columns>
    <columns>Error_Context__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Insert_Or_Update__c</columns>
    <columns>Record_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>